ExCalc/CalcGrammer/CalciParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:\Dev\ExCalc\ExCalc\ExCalc\CalcGrammer\Calci.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class CalciParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, VARB=5, NEWLINE=6, NUMBB=7, ASSIGN_OP=8, 
		ADD_SUB_OP=9, MUL_DIV_OP=10, WHITESPACE=11;
	public const int
		RULE_seq = 0, RULE_line = 1, RULE_add_sub = 2, RULE_mul_div = 3, RULE_increment = 4, 
		RULE_post_increment = 5, RULE_pre_increment = 6, RULE_post_decrement = 7, 
		RULE_pre_decrement = 8, RULE_atom = 9;
	public static readonly string[] ruleNames = {
		"seq", "line", "add_sub", "mul_div", "increment", "post_increment", "pre_increment", 
		"post_decrement", "pre_decrement", "atom"
	};

	private static readonly string[] _LiteralNames = {
		null, "'++'", "'--'", "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, "VARB", "NEWLINE", "NUMBB", "ASSIGN_OP", 
		"ADD_SUB_OP", "MUL_DIV_OP", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Calci.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CalciParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CalciParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CalciParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SeqContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(CalciParser.Eof, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public SeqContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_seq; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalciVisitor<TResult> typedVisitor = visitor as ICalciVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSeq(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SeqContext seq() {
		SeqContext _localctx = new SeqContext(Context, State);
		EnterRule(_localctx, 0, RULE_seq);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 23;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==VARB) {
				{
				{
				State = 20; line();
				}
				}
				State = 25;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 26; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public ITerminalNode VARB() { return GetToken(CalciParser.VARB, 0); }
		public ITerminalNode ASSIGN_OP() { return GetToken(CalciParser.ASSIGN_OP, 0); }
		public Add_subContext add_sub() {
			return GetRuleContext<Add_subContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(CalciParser.NEWLINE, 0); }
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalciVisitor<TResult> typedVisitor = visitor as ICalciVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28; Match(VARB);
			State = 29; Match(ASSIGN_OP);
			State = 30; add_sub(0);
			State = 31; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Add_subContext : ParserRuleContext {
		public Mul_divContext mul_div() {
			return GetRuleContext<Mul_divContext>(0);
		}
		public Add_subContext add_sub() {
			return GetRuleContext<Add_subContext>(0);
		}
		public ITerminalNode ADD_SUB_OP() { return GetToken(CalciParser.ADD_SUB_OP, 0); }
		public Add_subContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_add_sub; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalciVisitor<TResult> typedVisitor = visitor as ICalciVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAdd_sub(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Add_subContext add_sub() {
		return add_sub(0);
	}

	private Add_subContext add_sub(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Add_subContext _localctx = new Add_subContext(Context, _parentState);
		Add_subContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_add_sub, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 34; mul_div(0);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 41;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Add_subContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_add_sub);
					State = 36;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 37; Match(ADD_SUB_OP);
					State = 38; mul_div(0);
					}
					} 
				}
				State = 43;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Mul_divContext : ParserRuleContext {
		public IncrementContext increment() {
			return GetRuleContext<IncrementContext>(0);
		}
		public Mul_divContext mul_div() {
			return GetRuleContext<Mul_divContext>(0);
		}
		public ITerminalNode MUL_DIV_OP() { return GetToken(CalciParser.MUL_DIV_OP, 0); }
		public Mul_divContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mul_div; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalciVisitor<TResult> typedVisitor = visitor as ICalciVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMul_div(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Mul_divContext mul_div() {
		return mul_div(0);
	}

	private Mul_divContext mul_div(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Mul_divContext _localctx = new Mul_divContext(Context, _parentState);
		Mul_divContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_mul_div, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 45; increment();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 52;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Mul_divContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_mul_div);
					State = 47;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 48; Match(MUL_DIV_OP);
					State = 49; increment();
					}
					} 
				}
				State = 54;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class IncrementContext : ParserRuleContext {
		public Post_incrementContext post_increment() {
			return GetRuleContext<Post_incrementContext>(0);
		}
		public Pre_incrementContext pre_increment() {
			return GetRuleContext<Pre_incrementContext>(0);
		}
		public Post_decrementContext post_decrement() {
			return GetRuleContext<Post_decrementContext>(0);
		}
		public Pre_decrementContext pre_decrement() {
			return GetRuleContext<Pre_decrementContext>(0);
		}
		public AtomContext atom() {
			return GetRuleContext<AtomContext>(0);
		}
		public IncrementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_increment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalciVisitor<TResult> typedVisitor = visitor as ICalciVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncrement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncrementContext increment() {
		IncrementContext _localctx = new IncrementContext(Context, State);
		EnterRule(_localctx, 8, RULE_increment);
		try {
			State = 60;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 55; post_increment();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 56; pre_increment();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 57; post_decrement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 58; pre_decrement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 59; atom();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Post_incrementContext : ParserRuleContext {
		public ITerminalNode VARB() { return GetToken(CalciParser.VARB, 0); }
		public Post_incrementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_post_increment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalciVisitor<TResult> typedVisitor = visitor as ICalciVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPost_increment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Post_incrementContext post_increment() {
		Post_incrementContext _localctx = new Post_incrementContext(Context, State);
		EnterRule(_localctx, 10, RULE_post_increment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; Match(VARB);
			State = 63; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Pre_incrementContext : ParserRuleContext {
		public ITerminalNode VARB() { return GetToken(CalciParser.VARB, 0); }
		public Pre_incrementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pre_increment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalciVisitor<TResult> typedVisitor = visitor as ICalciVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPre_increment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Pre_incrementContext pre_increment() {
		Pre_incrementContext _localctx = new Pre_incrementContext(Context, State);
		EnterRule(_localctx, 12, RULE_pre_increment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65; Match(T__0);
			State = 66; Match(VARB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Post_decrementContext : ParserRuleContext {
		public ITerminalNode VARB() { return GetToken(CalciParser.VARB, 0); }
		public Post_decrementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_post_decrement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalciVisitor<TResult> typedVisitor = visitor as ICalciVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPost_decrement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Post_decrementContext post_decrement() {
		Post_decrementContext _localctx = new Post_decrementContext(Context, State);
		EnterRule(_localctx, 14, RULE_post_decrement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; Match(VARB);
			State = 69; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Pre_decrementContext : ParserRuleContext {
		public ITerminalNode VARB() { return GetToken(CalciParser.VARB, 0); }
		public Pre_decrementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pre_decrement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalciVisitor<TResult> typedVisitor = visitor as ICalciVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPre_decrement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Pre_decrementContext pre_decrement() {
		Pre_decrementContext _localctx = new Pre_decrementContext(Context, State);
		EnterRule(_localctx, 16, RULE_pre_decrement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71; Match(T__1);
			State = 72; Match(VARB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtomContext : ParserRuleContext {
		public ITerminalNode NUMBB() { return GetToken(CalciParser.NUMBB, 0); }
		public ITerminalNode VARB() { return GetToken(CalciParser.VARB, 0); }
		public Add_subContext add_sub() {
			return GetRuleContext<Add_subContext>(0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atom; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalciVisitor<TResult> typedVisitor = visitor as ICalciVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AtomContext atom() {
		AtomContext _localctx = new AtomContext(Context, State);
		EnterRule(_localctx, 18, RULE_atom);
		try {
			State = 80;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBB:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74; Match(NUMBB);
				}
				break;
			case VARB:
				EnterOuterAlt(_localctx, 2);
				{
				State = 75; Match(VARB);
				}
				break;
			case T__2:
				EnterOuterAlt(_localctx, 3);
				{
				State = 76; Match(T__2);
				State = 77; add_sub(0);
				State = 78; Match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public override bool Sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 2: return add_sub_sempred((Add_subContext)_localctx, predIndex);
		case 3: return mul_div_sempred((Mul_divContext)_localctx, predIndex);
		}
		return true;
	}
	private bool add_sub_sempred(Add_subContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return Precpred(Context, 2);
		}
		return true;
	}
	private bool mul_div_sempred(Mul_divContext _localctx, int predIndex) {
		switch (predIndex) {
		case 1: return Precpred(Context, 2);
		}
		return true;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
